<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/size_s">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_m"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_section1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_sec1"
        android:textColor="@color/cyan"
        android:textSize="@dimen/text_s"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/size_s"
        app:layout_constraintTop_toBottomOf="@id/title_exam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input_name_layout"
        app:layout_constraintBottom_toBottomOf="@id/input_name_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_s"
        android:layout_marginStart="@dimen/size_s"
        app:layout_constraintTop_toBottomOf="@id/title_exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_section1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exam_hint_name"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_s"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_xs"
        app:layout_constraintTop_toBottomOf="@id/input_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exam_hint_email"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_s"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/points2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_pts"
        android:textSize="@dimen/text_xs"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_s"
        app:layout_constraintTop_toBottomOf="@id/input_email_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_section2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_sec2"
        android:textColor="@color/cyan"
        android:textSize="@dimen/text_s"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/size_xs"
        app:layout_constraintBottom_toBottomOf="@id/points2"
        app:layout_constraintStart_toEndOf="@id/points2"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/question2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_q2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_s"
        android:layout_marginTop="@dimen/size_xs"
        android:layout_marginEnd="@dimen/size_xs"
        app:layout_constraintTop_toBottomOf="@id/points2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_q2" />

    <RadioGroup
        android:id="@+id/question2_radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_xs"
        app:layout_constraintTop_toBottomOf="@id/points2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_q2">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rb_linear"
            android:textSize="@dimen/text_xs"
            android:minHeight="@dimen/size_l"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rb_constraint"
            android:textSize="@dimen/text_xs"
            android:minHeight="@dimen/size_l"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rb_frame"
            android:textSize="@dimen/text_xs"
            android:minHeight="@dimen/size_l"/>
    </RadioGroup>

    <EditText
        android:id="@+id/points3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_pts"
        android:textSize="@dimen/text_xs"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_s"
        app:layout_constraintTop_toBottomOf="@id/question2_radiogroup"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_section3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_sec3"
        android:textColor="@color/cyan"
        android:textSize="@dimen/text_s"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/size_xs"
        app:layout_constraintBottom_toBottomOf="@id/points3"
        app:layout_constraintStart_toEndOf="@id/points3"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/question3_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_q3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_s"
        android:layout_marginTop="@dimen/size_xs"
        app:layout_constraintTop_toBottomOf="@id/points3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_cb_activity"
        android:textSize="@dimen/text_xs"
        android:minHeight="@dimen/size_l"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/question3_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkbox_viewmodel" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_viewmodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_cb_viewmodel"
        android:textSize="@dimen/text_xs"
        android:minHeight="@dimen/size_l"
        app:layout_constraintTop_toBottomOf="@id/question3_text"
        app:layout_constraintStart_toEndOf="@id/checkbox_activity"
        app:layout_constraintEnd_toStartOf="@id/checkbox_javascript" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_javascript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_cb_javascript"
        android:textSize="@dimen/text_xs"
        android:minHeight="@dimen/size_l"
        app:layout_constraintTop_toBottomOf="@id/question3_text"
        app:layout_constraintStart_toEndOf="@id/checkbox_viewmodel"
        app:layout_constraintEnd_toStartOf="@id/checkbox_repo" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_cb_repo"
        android:textSize="@dimen/text_xs"
        android:minHeight="@dimen/size_l"
        app:layout_constraintTop_toBottomOf="@id/question3_text"
        app:layout_constraintStart_toEndOf="@id/checkbox_javascript"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/points4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_pts"
        android:textSize="@dimen/text_xs"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_s"
        app:layout_constraintTop_toBottomOf="@id/checkbox_activity"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_section4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_sec4"
        android:textColor="@color/cyan"
        android:textSize="@dimen/text_s"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/points4"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_q4_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/size_xs"
        app:layout_constraintTop_toBottomOf="@id/points4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:hint="@string/exam_hint_q4"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_s"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_btn_send"
        android:textColor="@color/white"
        android:textSize="@dimen/text_s"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:cornerRadius="@dimen/size_l"
        android:padding="@dimen/size_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>